--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Float Layout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
 
 <body>
     <div>
-        <div class="main1"></div>
-        <div class="main2">
+        <div class="maina"></div>
+        <div class="mainb">
             <div class="header"></div>
             <div class="content">
                 <div class="article"></div>
