--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Float Layout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 
 <body>
-
+    <div>
+        <div class="main1"></div>
+        <div class="main2">
+            <div class="header"></div>
+            <div class="content">
+                <div class="article"></div>
+                <div class="aside"></div>
+            </div>
+            <div class="footer"></div>
+        </div>
+    </div>
 </body>
 
 </html>
