--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div>
-        <div class="main1"></div>
-        <div class="main2">
+        <div class="mainone"></div>
+        <div class="maintwo">
             <div class="header"></div>
             <div class="content">
                 <div class="article"></div>
