flex class homework

--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Float Layout</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
 
 <body>
-    <div>
-        <div class="mainone"></div>
-        <div class="maintwo">
-            <div class="header"></div>
-            <div class="content">
-                <div class="article"></div>
-                <div class="aside"></div>
+
+
+    <div class=" main ">
+        <div class="col-1 "></div>
+        <div class="col-2 ">
+            <div class="header "></div>
+            <div class="content ">
+                <div class="middel ">
+                    <div class="article "> <span class="flex">Flex exercise will help us to make a great website in a very easy way.</span></div>
+                    <div class="footer "></div>
+                </div>
+                <div class="aside "></div>
             </div>
-            <div class="footer"></div>
         </div>
     </div>
 </body>
